# CodeHarvester

./: .gitignore  CMakeLists.txt  LICENSE  OUTPUT_EXAMPLE.md  README.md  main.spec  requirements.txt  run_tests.sh  setup.py
.github/workflows/: build.yml  tests.yml
include/: CodeHarvester.h  CommonIncludes.h  DirectoryProcessor.h  FileProcessor.h  OptionsHandler.h
src/: CodeHarvester.cpp  DirectoryProcessor.cpp  FileProcessor.cpp  OptionsHandler.cpp  main.cpp  main.py
src/file_manipulation/: file_operations.py  tree_generator.py
src/gui/: server.py
src/utils/: open_browser.py  output_supressor.py
static/: index.html
test/: e2e.py  test_main.py
test/file_manipulation/: test_file_operations.py  test_tree_generator.py
test/test_dir/exclude_this_dir/: file4.md
test/test_dir/subdir1/: file1.txt  file2.js
test/test_dir/subdir2/: file3.py
test/utils/: test_open_browser.py  test_output_supressor.py
